--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+
+    <!-- Narutofy page -->
     <div class="page">
         <div class="heading">Narutofy</div>
         <div class="description">Listen your favourite Naruto Songs Here</div>
@@ -67,6 +69,7 @@
     </div>
 
 
+    <!-- Narutofy js -->
     <script src="./script.js"></script>
 </body>
 
